migrate in updates for csnl mdlng

--- a/Header/header_common.yaml
+++ b/Header/header_common.yaml
@@ -1,6 +1,13 @@
-title: TITLE_PLACEHOLDER
+title: A hypothetical study using fake data
 author:
-  AUTHOR_PLACEHOLDER
+  - Alejandra R Scienceace:
+      email: fake_email@fake_institute.com
+      institute: [Insitute_A, Institute_B]
+      correspondence: true
+  - name: Fionn S Researchchamp
+    email: fake_email@made_up_org.com
+    institute: [Institute_C, Institute_B]
 institute:
-  INSTITUTE_PLACEHOLDER
-keywords:  KEYWORDS_PLACEHOLDER
+  - Insitute_A: Awesome University, Shanghai
+  - Institute_B: August Institution, London
+  - Institute_C: Highly Ranked Uni, Montreal
